Remove depracated usage of Url